--- a/netlify.toml
+++ b/netlify.toml
@@ -59,6 +59,6 @@
     "public/support/how-to",
     "public/support/how-to/*",
   ]
-  todoPatterns = ["https://*"]
+  todoPatterns = []
   checkExternal = false
   followSourceMaps = false
