--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "algoliasearch": "^4.5.1",
   "atomic-algolia": "^0.3.19",
   "bootstrap": "^4.5.2",
+  "child_process": "^1.0.2",
   "content-loaded": "^1.2.1",
   "dotenv": "^8.2.0",
   "glob": "^7.1.6",
