--- a/package.json
+++ b/package.json
@@ -1,48 +1,59 @@
 {
- "comments": {
-  "dependencies": {},
-  "devDependencies": {}
- },
- "private": true,
- "browserslist": "> 1%",
- "scripts": {
-  "start": "run-p start:*",
-  "start:hugo": "make serve",
-  "start:webpack": "webpack --mode=development --watch",
-  "build": "make install && rm -rf static/assets && run-s build:webpack build:hugo",
-  "build:hugo": "make build",
-  "build:webpack": "webpack --mode=production"
- },
- "devDependencies": {
-  "@babel/core": "^7.8.7",
-  "@babel/preset-env": "^7.8.7",
-  "autoprefixer": "^9.7.4",
-  "babel-loader": "^8.0.6",
-  "core-js": "^3.6.4",
-  "css-loader": "^3.4.2",
-  "mini-css-extract-plugin": "^0.9.0",
-  "npm-run-all": "^4.1.5",
-  "postcss-loader": "^3.0.0",
-  "webpack": "^4.42.0",
-  "webpack-cli": "^3.3.11"
- },
- "dependencies": {
-  "@babel/cli": "^7.11.6",
-  "@babel/core": "^7.11.6",
-  "algoliasearch": "^4.5.1",
-  "atomic-algolia": "^0.3.19",
-  "bootstrap": "^4.5.2",
-  "child_process": "^1.0.2",
-  "content-loaded": "^1.2.1",
-  "dotenv": "^8.2.0",
-  "glob": "^7.1.6",
-  "highlight.js": "^10.2.0",
-  "instantsearch.js": "^4.8.1",
-  "jquery": "^3.5.1",
-  "moment": "^2.29.0",
-  "popper.js": "^1.16.1",
-  "smoothscroll-polyfill": "^0.4.4"
- },
- "name": "support-how-to",
- "version": "0.1.0"
+    "comments": {
+        "dependencies": {},
+        "devDependencies": {}
+    },
+    "private": true,
+    "browserslist": "> 1%",
+    "scripts": {
+        "start": "run-p start:*",
+        "start:hugo": "make serve",
+        "start:webpack": "webpack --mode=development --watch",
+        "build": "make install && rm -rf static/assets && run-s build:webpack build:hugo",
+        "build:hugo": "make build",
+        "build:webpack": "webpack --mode=production",
+        "link-check": "repo-link-check -c config/link-check/config.yml -s filesystem -u",
+        "link-check-diff": "repo-link-check -c config/link-check/config.yml",
+        "link-check-dev-server": "repo-link-check -c config/link-check/config.yml -r http://localhost:3000",
+        "link-check-exclude": "repo-link-check -c config/link-check/config.yml -s filesystem -u only"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.8.7",
+        "@babel/preset-env": "^7.8.7",
+        "autoprefixer": "^9.7.4",
+        "babel-loader": "^8.0.6",
+        "core-js": "^3.6.4",
+        "css-loader": "^3.4.2",
+        "mini-css-extract-plugin": "^0.9.0",
+        "npm-run-all": "^4.1.5",
+        "postcss-loader": "^3.0.0",
+        "webpack": "^4.42.0",
+        "webpack-cli": "^3.3.11"
+    },
+    "dependencies": {
+        "@babel/cli": "^7.11.6",
+        "@babel/core": "^7.11.6",
+        "algoliasearch": "^4.5.1",
+        "atomic-algolia": "^0.3.19",
+        "axios": "^0.20.0",
+        "bootstrap": "^4.5.2",
+        "chalk": "^4.1.0",
+        "child_process": "^1.0.2",
+        "content-loaded": "^1.2.1",
+        "dotenv": "^8.2.0",
+        "glob": "^7.1.6",
+        "highlight.js": "^10.2.0",
+        "instantsearch.js": "^4.8.1",
+        "jquery": "^3.5.1",
+        "moment": "^2.29.0",
+        "popper.js": "^1.16.1",
+        "repo-link-check": "^0.7.1",
+        "smoothscroll-polyfill": "^0.4.4",
+        "yargs": "^16.0.3"
+    },
+    "name": "support-how-to",
+    "version": "0.1.0",
+    "bin": {
+        "lct": "./link-checker.js"
+    }
 }
