--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "@babel/cli": "^7.11.6",
         "@babel/core": "^7.11.6",
+        "@munter/tap-render": "^0.2.0",
         "algoliasearch": "^4.5.1",
         "atomic-algolia": "^0.3.19",
         "axios": "^0.20.0",
@@ -40,7 +41,9 @@
         "content-loaded": "^1.2.1",
         "dotenv": "^8.2.0",
         "glob": "^7.1.6",
+        "globby": "^11.0.1",
         "highlight.js": "^10.2.0",
+        "hyperlink": "^4.5.3",
         "instantsearch.js": "^4.8.1",
         "jquery": "^3.5.1",
         "moment": "^2.29.0",
@@ -49,6 +52,7 @@
         "remark-validate-links": "^10.0.2",
         "repo-link-check": "^0.7.1",
         "smoothscroll-polyfill": "^0.4.4",
+        "tap-spot": "^1.1.1",
         "to-vfile": "^6.1.0",
         "vfile-reporter": "^6.0.1",
         "yargs": "^16.0.3"
