--- a/netlify.toml
+++ b/netlify.toml
@@ -53,3 +53,47 @@
   todoPatterns = []
   checkExternal = false
   followSourceMaps = false
+
+[[plugins]]
+  package = "netlify-plugin-no-more-404"
+
+  # all inputs are optional, we just show you the defaults below
+  [plugins.inputs]
+  
+  # either "warn" or "error"
+  on404 = "error" 
+  
+  # change this key to a new one any time you need to restart from scratch
+  cacheKey = "MyCacheKey"
+  
+  # (for development) turn true for extra diagnostic logging
+  debugMode = false
+
+[[plugins]]
+  package = "@netlify/plugin-sitemap"
+
+  [plugins.inputs]
+  buildDir = "public"
+  prettyURLs = false
+  trailingSlash = true
+
+[[plugins]]
+  package = "netlify-plugin-image-optim"
+
+[[plugins]]
+  package = "netlify-plugin-a11y"
+
+  # all inputs are optional, we just show you the defaults below
+  [plugins.inputs]
+  
+  # required config
+  checkPaths = ['/'] # you can give an array of directories or paths to html files, that you want to run a11y checks on
+
+  
+  # # optional config
+  # ignoreDirectories = ['/admin']  # explicitly ignore these directories
+
+  # resultMode = "warn" # is "error" by default
+
+  # # Developer only
+  # debugMode = true # extra logging for plugin developers
