New Netlify Plugins

--- a/netlify.toml
+++ b/netlify.toml
@@ -49,8 +49,8 @@
   ]
   recursive = true
   pretty = true
-  skipPatterns = ["public/support", "public/support/how-to"]
-  todoPatterns = []
+  # skipPatterns = ["public/support", "public/support/how-to"]
+  # todoPatterns = []
   checkExternal = false
   followSourceMaps = false
 
