--- a/plugins/netlify-plugin-check-urls/manifest.yml
+++ b/plugins/netlify-plugin-check-urls/manifest.yml
@@ -21,7 +21,7 @@ inputs:
     # description: Enable to check references to source maps, source map sources etc. Many build tools don't emit working references, so this is disabled by default
     # validation: boolean
   - name: skipPatterns
-    default: []
+    default: ["public/support", "public/support/*"]
     # description: You can mark some check as skipped, which will block check urls from ever attempting to execute them. skipPatterns is an array of strings you can match against failing reports
     # validation: array of strings, unique items
   - name: todoPatterns
