--- a/plugins/netlify-plugin-check-urls/manifest.yml
+++ b/plugins/netlify-plugin-check-urls/manifest.yml
@@ -1,16 +1,16 @@
 name: netlify-plugin-check-urls
 inputs:
   - name: entryPoints
-    default: ['*.html', '*.md']
+    default: ['*.html']
     # description: An array of glob patterns for pages on your site. Recursive traversal will start from these
     # validation: array of strings, at least one item, unique items
   - name: recursive
     default: true
-    # description: Recurse through all the links and asset references on your page, starting at the entrypoints
+    # description: Recurse through all the links and asset references on your page, starting at the entry points
     # validation: boolean
   - name: pretty
     default: true
-    # description: Check urls outputs TAP (https://testanything.org/tap-version-13-specification.html) by default. Enabling pretty mode makes the output easier on the eyes.
+    # description: Check links outputs TAP (https://testanything.org/tap-version-13-specification.html) by default. Enabling pretty mode makes the output easier on the eyes.
     # validation: boolean
   - name: checkExternal
     default: false
@@ -21,8 +21,8 @@ inputs:
     # description: Enable to check references to source maps, source map sources etc. Many build tools don't emit working references, so this is disabled by default
     # validation: boolean
   - name: skipPatterns
-    default: []
-    # description: You can mark some check as skipped, which will block check urls from ever attempting to execute them. skipPatterns is an array of strings you can match against failing reports
+    default: ["public/support", "public/support/how-to", "public/support/*", "public/support/how-to/*"]
+    # description: You can mark some check as skipped, which will block check links from ever attempting to execute them. skipPatterns is an array of strings you can match against failing reports
     # validation: array of strings, unique items
   - name: todoPatterns
     default: []
