--- a/netlify.toml
+++ b/netlify.toml
@@ -49,7 +49,7 @@
   ]
   recursive = true
   pretty = true
-  skipPatterns = ["public/support", "public/support/how-to", "public/support/*", "public/support/how-to/*"]
+  skipPatterns = ["public/support", "public/support/how-to", "public/support/*", "public/support/how-to/*", "https://code.jquery.com/", "https://code.jquery.com/*", "https://stackpath.bootstrapcdn.com/", "https://stackpath.bootstrapcdn.com/*", "https://cdn.jsdelivr.net/", "https://cdn.jsdelivr.net/*", "https://fonts.googleapis.com/", "https://fonts.googleapis.com/*", "https://maxcdn.bootstrapcdn.com/", "https://maxcdn.bootstrapcdn.com/*", "https://stackpath.bootstrapcdn.com/", "https://stackpath.bootstrapcdn.com/*"]
   todoPatterns = []
   checkExternal = false
   followSourceMaps = false
