--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "glob": "^7.1.6",
         "globby": "^11.0.1",
         "highlight.js": "^10.2.0",
+        "html-entities": "^1.3.1",
         "hyperlink": "^4.5.3",
         "instantsearch.js": "^4.8.1",
         "jquery": "^3.5.1",
