--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build.environment]
-  HUGO_VERSION = "0.75.1"
+  HUGO_VERSION = "0.76.4"
   NPM_VERSION = "6.14.8"
   NODE_VERSION = "12.16.3"
 
@@ -7,9 +7,21 @@
   command = "npm run build"
   publish = "public"
 
+[context.production]
+  publish = "public"
+  command = "npm run build"
 
 [context.deploy-preview]
+  publish = "public"
   command = "npm run build"
+
+[context.branch-deploy]
+  command = "echo branch"
+
+[context.branch-deploy.environment]
+  NODE_ENV = "development"
+
+[context.staging]
   publish = "public"
 
 [[headers]]
