--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build.environment]
-  HUGO_VERSION = "0.75.1"
+  HUGO_VERSION = "0.76.4"
   NPM_VERSION = "6.14.8"
   NODE_VERSION = "12.16.3"
 
@@ -7,9 +7,21 @@
   command = "npm run build"
   publish = "public"
 
+[context.production]
+  publish = "public"
+  command = "npm run build"
 
 [context.deploy-preview]
+  publish = "public"
   command = "npm run build"
+
+[context.branch-deploy]
+  command = "echo branch"
+
+[context.branch-deploy.environment]
+  NODE_ENV = "development"
+
+[context.staging]
   publish = "public"
 
 [[headers]]
@@ -54,46 +66,45 @@
   checkExternal = false
   followSourceMaps = false
 
-# [[plugins]]
-#   package = "netlify-plugin-no-more-404"
+[[plugins]]
+  package = "netlify-plugin-no-more-404"
 
-#   # all inputs are optional, we just show you the defaults below
-#   [plugins.inputs]
+  # all inputs are optional, we just show you the defaults below
+  [plugins.inputs]
   
-#   # either "warn" or "error"
-#   on404 = "error" 
+  # either "warn" or "error"
+  on404 = "error" 
   
-#   # change this key to a new one any time you need to restart from scratch
-#   cacheKey = "MyCacheKey"
+  # change this key to a new one any time you need to restart from scratch
+  cacheKey = "MyCacheKey"
   
-#   # (for development) turn true for extra diagnostic logging
-#   debugMode = false
+  # (for development) turn true for extra diagnostic logging
+  debugMode = false
 
-# [[plugins]]
-#   package = "@netlify/plugin-sitemap"
+[[plugins]]
+  package = "@netlify/plugin-sitemap"
 
-#   [plugins.inputs]
-#   buildDir = "public"
-#   prettyURLs = false
-#   trailingSlash = true
+  [plugins.inputs]
+  buildDir = "public"
+  prettyURLs = true
+  trailingSlash = true
 
-# [[plugins]]
-#   package = "netlify-plugin-image-optim"
+[[plugins]]
+  package = "netlify-plugin-image-optim"
 
-# [[plugins]]
-#   package = "netlify-plugin-a11y"
+[[plugins]]
+  package = "netlify-plugin-a11y"
 
-#   # all inputs are optional, we just show you the defaults below
-#   [plugins.inputs]
+  # all inputs are optional, we just show you the defaults below
+  [plugins.inputs]
   
-#   # required config
-#   checkPaths = ['/'] # you can give an array of directories or paths to html files, that you want to run a11y checks on
+  # required config
+  checkPaths = ['/'] # you can give an array of directories or paths to html files, that you want to run a11y checks on
 
-  
-#   # # optional config
-#   # ignoreDirectories = ['/admin']  # explicitly ignore these directories
+  # optional config
+  # ignoreDirectories = ['/admin']  # explicitly ignore these directories
 
-#   # resultMode = "warn" # is "error" by default
+  resultMode = "warn" # is "error" by default
 
-#   # # Developer only
-#   # debugMode = true # extra logging for plugin developers
+  # Developer only
+  debugMode = true # extra logging for plugin developers
