image optim takes a lot of time

--- a/netlify.toml
+++ b/netlify.toml
@@ -89,8 +89,8 @@
   prettyURLs = true
   trailingSlash = true
 
-[[plugins]]
-  package = "netlify-plugin-image-optim"
+# [[plugins]]
+#   package = "netlify-plugin-image-optim"
 
 [[plugins]]
   package = "netlify-plugin-a11y"
