--- a/netlify.toml
+++ b/netlify.toml
@@ -53,21 +53,21 @@
   autoLaunch = false
 
 
-[[plugins]]
-  package = "./plugins/netlify-plugin-check-urls"
- [plugins.inputs]
-  entryPoints = [
-    "*.html","*.md"
-  ]
-  recursive = true
-  pretty = true
-  skipPatterns = ["public/support", "public/support/how-to", "public/support/*", "public/support/how-to/*", "https://code.jquery.com/", "https://code.jquery.com/*", "https://stackpath.bootstrapcdn.com/", "https://stackpath.bootstrapcdn.com/*", "https://cdn.jsdelivr.net/", "https://cdn.jsdelivr.net/*", "https://fonts.googleapis.com/", "https://fonts.googleapis.com/*", "https://maxcdn.bootstrapcdn.com/", "https://maxcdn.bootstrapcdn.com/*", "https://stackpath.bootstrapcdn.com/", "https://stackpath.bootstrapcdn.com/*"]
-  todoPatterns = []
-  checkExternal = false
-  followSourceMaps = false
+# [[plugins]]
+#   package = "./plugins/netlify-plugin-check-urls"
+#  [plugins.inputs]
+#   entryPoints = [
+#     "*.html","*.md"
+#   ]
+#   recursive = true
+#   pretty = true
+#   skipPatterns = ["public/support", "public/support/how-to", "public/support/*", "public/support/how-to/*", "https://code.jquery.com/", "https://code.jquery.com/*", "https://stackpath.bootstrapcdn.com/", "https://stackpath.bootstrapcdn.com/*", "https://cdn.jsdelivr.net/", "https://cdn.jsdelivr.net/*", "https://fonts.googleapis.com/", "https://fonts.googleapis.com/*", "https://maxcdn.bootstrapcdn.com/", "https://maxcdn.bootstrapcdn.com/*", "https://stackpath.bootstrapcdn.com/", "https://stackpath.bootstrapcdn.com/*"]
+#   todoPatterns = []
+#   checkExternal = false
+#   followSourceMaps = false
 
-[[plugins]]
-  package = "netlify-plugin-no-more-404"
+# [[plugins]]
+#   package = "netlify-plugin-no-more-404"
 
   # all inputs are optional, we just show you the defaults below
   [plugins.inputs]
