--- a/netlify.toml
+++ b/netlify.toml
@@ -70,16 +70,16 @@
 #   package = "netlify-plugin-no-more-404"
 
   # all inputs are optional, we just show you the defaults below
-  [plugins.inputs]
+  # [plugins.inputs]
   
-  # either "warn" or "error"
-  on404 = "error" 
+  # # either "warn" or "error"
+  # on404 = "error" 
   
-  # change this key to a new one any time you need to restart from scratch
-  cacheKey = "MyCacheKey"
+  # # change this key to a new one any time you need to restart from scratch
+  # cacheKey = "MyCacheKey"
   
-  # (for development) turn true for extra diagnostic logging
-  debugMode = false
+  # # (for development) turn true for extra diagnostic logging
+  # debugMode = false
 
 [[plugins]]
   package = "@netlify/plugin-sitemap"
