--- a/netlify.toml
+++ b/netlify.toml
@@ -15,14 +15,9 @@
   publish = "public"
   command = "npm run build"
 
-[context.branch-deploy]
-  command = "echo branch"
-
-[context.branch-deploy.environment]
-  NODE_ENV = "development"
-
 [context.staging]
   publish = "public"
+  command = "npm run build"
 
 [[headers]]
   for = "/img/*"
