--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build.environment]
-  HUGO_VERSION = "0.76.4"
+  HUGO_VERSION = "0.76.5"
   NPM_VERSION = "6.14.8"
   NODE_VERSION = "12.16.3"
 
@@ -9,6 +9,7 @@
 
 [context.production]
   publish = "public"
+  HUGO_ENV = "production"
   command = "npm run build"
 
 [context.deploy-preview]
