remove the aloglia crawler

--- a/netlify.toml
+++ b/netlify.toml
@@ -102,7 +102,7 @@
   # Developer only
   debugMode = true # extra logging for plugin developers
 
-[[plugins]]
-package = "@algolia/netlify-plugin-crawler"
-  [plugins.inputs]
-  branches = ['staging']
+# [[plugins]]
+# package = "@algolia/netlify-plugin-crawler"
+#   [plugins.inputs]
+#   branches = ['staging']
